--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
-sudo: false
 language: node_js
+
 node_js:
-  - "0.10"
-  - "0.12"
-  - "4"
-  - "5"
-  - "iojs"
-  - "iojs-v1"
-  - "iojs-v2"
+  - "8"
+  - "10"
+  - "11"
+  - "node"
+
+sudo: false
+
+install:
+  - "npm install"
+
+os:
+  - "linux"
+  - "osx"
+  - "windows"
