--- a/package.json
+++ b/package.json
@@ -1,32 +1,23 @@
 {
-  "name": "no-arrowception",
+  "name": "@hapi/rule-no-arrowception",
   "version": "1.0.0",
   "description": "ESLint rule preventing arrow functions that implicitly create arrow functions",
-  "author": "Continuation Labs <contact@continuation.io> (http://continuation.io/)",
   "main": "lib/index.js",
-  "scripts": {
-    "test": "belly-button && lab -v -t 100 -a code"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/continuationlabs/no-arrowception.git"
-  },
+  "repository": "https://github.com/hapijs/rule-no-arrowception.git",
   "keywords": [
     "eslint",
-    "rule",
+    "hapi",
     "arrow",
-    "function",
-    "arrow function"
+    "function"
   ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/continuationlabs/no-arrowception/issues"
-  },
-  "homepage": "https://github.com/continuationlabs/no-arrowception",
+  "dependencies": {},
   "devDependencies": {
-    "belly-button": "1.x.x",
-    "code": "1.x.x",
-    "eslint": "1.x.x",
-    "lab": "6.x.x"
-  }
+    "@hapi/code": "5.x.x",
+    "@hapi/lab": "18.x.x",
+    "eslint": "5.x.x"
+  },
+  "scripts": {
+    "test": "lab -t 100 -a @hapi/code -L"
+  },
+  "license": "BSD-3-Clause"
 }
